--- a/package.json
+++ b/package.json
@@ -51,5 +51,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "msw": "^0.42.1",
+    "whatwg-fetch": "^3.6.2"
   }
 }
